# SamRewritten

./: .gitignore  .licensesnip  .licensesnipignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  snapcraft.yaml  snapcraft_strict.yaml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  SUPPORT.yml
.github/workflows/: build_publish.yml  build_publish_snap.yml  build_publish_windows.yml  build_release.yml
assets/: README.txt  org.samrewritten.SamRewritten.gresource.xml  org.samrewritten.SamRewritten.gschema.xml
assets/ui/: achievement_row.blp  achievement_timer_form.blp  achievements.blp
doc/: CONTRIBUTING.md  DOCUMENTATION.md  samdoc.drawio
docs/: DOCUMENTATION.md  flatpak packaging.md  index.html  robots.txt  sitemap.xml  snap packaging.md  snapcraft.yaml
package/: .gitignore  PKGBUILD  appimage.Dockerfile  arch.Dockerfile  bundle-icons.sh  compose.yaml  flatpak.yml  rebuild_arch.sh  rebuild_flatpak.sh  rebuild_snap.sh  sam-launcher.sh  samrewritten.desktop  snapcraft.yaml  win.Dockerfile  windows_installer.nsi
po/: POTFILES.in  README.md  fr.po  pt_BR.po  samrewritten.pot  update-pot.sh
snap/gui/: samrewritten.desktop
src/: main.rs
src/backend/: app.rs  app_functions.rs  app_lister.rs  app_manager.rs  connected_steam.rs  key_value.rs  local_config.rs  local_stats.rs  mod.rs  orchestrator.rs  orchestrator_client.rs  progress_io.rs  stat_definitions.rs  tests.rs  types.rs
src/cli_frontend/: mod.rs
src/frontend/: achievement.rs  achievement_automatic_view.rs  achievement_manual_view.rs  achievement_view.rs  app_list_view.rs  app_list_view_callbacks.rs  app_view.rs  application_actions.rs  build_app.rs  custom_progress_bar_widget.rs  gtk_models.rs  gtk_wrappers.rs  ipc_process.rs  mod.rs  request.rs  shimmer_image.rs  stat.rs  stat_view.rs  steam_app.rs  ui_components.rs
src/gui_frontend/: achievement.rs  achievement_automatic_view.rs  achievement_manual_view.rs  achievement_view.rs  app_list_view.rs  app_list_view_callbacks.rs  app_view.rs  application_actions.rs  custom_progress_bar_widget.rs  dialogs.rs  friend_picker.rs  gsettings.rs  i18n.rs  mod.rs  request.rs  stat_view.rs  steam_app.rs  ui_components.rs  unlock_queue.rs  unlock_scheduler.rs
src/steam_client/: client_engine_vtable.rs  client_engine_wrapper.rs  client_user_stats_map_vtable.rs  client_user_stats_map_wrapper.rs  client_user_vtable.rs  client_user_wrapper.rs  create_client.rs  mod.rs  steam_app_list_vtable.rs  steam_app_list_wrapper.rs  steam_apps_001_vtable.rs  steam_apps_001_wrapper.rs  steam_apps_vtable.rs  steam_apps_wrapper.rs  steam_client_vtable.rs  steam_client_wrapper.rs  steam_friends_vtable.rs  steam_friends_wrapper.rs  types.rs  (+9 more)
(+44 files in other folders)
