[package]
name = "Sam2"
version = "0.1.0"
edition = "2024"

[dependencies]
# steamworks = { version = "0.11.0", features = ["raw-bindings"] }
# bincode = "2" // To replace serde_json ?
libloading = "0.8.6"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_6"] }
quick-xml = { version = "0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["blocking"] }
interprocess = "2"
async-channel = "2"
