[package]
name = "SamRewritten"
version = "0.1.0"
description = "Steam Achievement Manager Rewritten"
authors = ["Paul <abonnementspaul -@- gmail.com>", "Phillip <phillip.mendel -@- posteo.de>"]
edition = "2024"

[dependencies]
# bincode = "2" // To replace serde_json ?
libloading = "0"
gtk = { version = "0", package = "gtk4", features = ["v4_6"] }
quick-xml = { version = "0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["blocking"] }
interprocess = "2"
adw = { version = "0", package = "libadwaita", features = ["v1_1"], optional = true }

[features]
default = []
adwaita = ['dep:adw']

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0"

[profile.release]
windows_subsystem = "windows"

[[bin]]
name = "samrewritten"
path = "src/main.rs"
