[package]
name = "SamRewritten"
version = "1.2.2"
description = "Steam Achievement Manager Rewritten"
edition = "2024"
authors = [
    "Paul <abonnementspaul -@- gmail.com>",
    "Phillip <phillip.mendel -@- posteo.de>",
    "All SamRewritten contributors"
]

[dependencies]
gtk = { version = "0", package = "gtk4", features = ["v4_6"], optional = true }
adw = { version = "0", package = "libadwaita", features = ["v1_1"], optional = true }
clap = { version = "4", features = ['derive'], optional = true }
quick-xml = { version = "0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["blocking"] }
interprocess = "2"
libloading = "0"

[features]
default = ['dep:gtk']
adwaita = ['dep:gtk', 'dep:adw']
cli = ['dep:clap']
win-console = ['dep:gtk']

[target.'cfg(windows)'.dependencies]
winreg = "0"

[target.'cfg(windows)'.build-dependencies]
winres = "0"

[package.metadata.appimage]
icon = "assets/icon_256.png"
desktop_entry = "package/samrewritten.desktop"
assets = ["assets/gschemas.compiled"]

[profile.release]
lto = "thin"

[[bin]]
name = "samrewritten"
path = "src/main.rs"
